<?xml version="1.0" encoding="utf-8"?><!--
  ~
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~    http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_login_vertical_begin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/guideline_login_sign_up_vertical_keyline" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_login_vertical_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/guideline_login_sign_up_vertical_keyline" />

    <ImageView
        android:id="@+id/image_login_logo"
        style="@style/SplashLogo"
        android:contentDescription="@string/cd_image_logo"
        app:layout_constraintBottom_toTopOf="@+id/text_input_login_email"
        app:layout_constraintEnd_toStartOf="@+id/guideline_login_vertical_end"
        app:layout_constraintStart_toEndOf="@+id/guideline_login_vertical_begin"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_login_email"
        style="@style/LoginSignUpTextInputFields"
        android:layout_marginTop="@dimen/text_input_login_email_margin_top"
        app:layout_constraintBottom_toTopOf="@+id/text_input_login_password"
        app:layout_constraintEnd_toStartOf="@+id/guideline_login_vertical_end"
        app:layout_constraintStart_toEndOf="@+id/guideline_login_vertical_begin"
        app:layout_constraintTop_toBottomOf="@+id/image_login_logo">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_login_email"
            style="@style/LoginSignUpEditTextFields.Email" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_login_password"
        style="@style/LoginSignUpTextInputFields.Password"
        app:layout_constraintBottom_toTopOf="@+id/button_login"
        app:layout_constraintEnd_toStartOf="@+id/guideline_login_vertical_end"
        app:layout_constraintStart_toEndOf="@+id/guideline_login_vertical_begin"
        app:layout_constraintTop_toBottomOf="@+id/text_input_login_email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_login_password"
            style="@style/LoginSignUpEditTextFields.Password.Login" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_login"
        style="@style/LoginSignUpButton.Login"
        app:layout_constraintBottom_toTopOf="@+id/divider_login_sign_up"
        app:layout_constraintEnd_toStartOf="@+id/guideline_login_vertical_end"
        app:layout_constraintStart_toEndOf="@+id/guideline_login_vertical_begin"
        app:layout_constraintTop_toBottomOf="@+id/text_input_login_password" />

    <View
        android:id="@+id/divider_login_sign_up"
        style="@style/DividerLoginSignUpOptions"
        app:layout_constraintBottom_toTopOf="@+id/text_button_login_option_sign_up"
        app:layout_constraintEnd_toStartOf="@+id/guideline_login_vertical_end"
        app:layout_constraintStart_toEndOf="@+id/guideline_login_vertical_begin"
        app:layout_constraintTop_toBottomOf="@+id/button_login" />

    <TextView
        android:id="@+id/text_login_sign_up_divider"
        style="@style/LabelDividerLoginSignUpOptions"
        app:layout_constraintBottom_toBottomOf="@+id/divider_login_sign_up"
        app:layout_constraintEnd_toStartOf="@+id/guideline_login_vertical_end"
        app:layout_constraintStart_toEndOf="@+id/guideline_login_vertical_begin"
        app:layout_constraintTop_toTopOf="@+id/divider_login_sign_up" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/text_button_login_option_sign_up"
        style="@style/LoginSignUpTextButton.OptionSignUp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline_login_vertical_end"
        app:layout_constraintStart_toEndOf="@+id/guideline_login_vertical_begin"
        app:layout_constraintTop_toBottomOf="@+id/divider_login_sign_up" />

    <ProgressBar
        android:id="@+id/progress_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>