<!--
  ~
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~    http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <!-- Name of the App -->
    <string name="app_name">Instagram Demo</string>

    <!-- ============================ -->
    <!-- NETWORK CONNECTIVITY STRINGS -->
    <!-- ============================ -->
    <string name="error_network_connection_issue">Internet connection lost, please retry again</string>
    <string name="error_network_default_issue">Something wrong happened, please retry again</string>
    <string name="error_network_internal_issue">Our systems got an error, please retry again</string>
    <string name="error_network_server_not_available_issue">
        Our services are under maintenance, please retry after some time
    </string>
    <string name="error_network_server_connection_issue">Not able to connect, please retry again</string>
    <string name="error_network_login_unauthorized_issue">Please verify your credentials and try again</string>

    <!-- ============== -->
    <!-- COMMON STRINGS -->
    <!-- ============== -->
    <!-- Common progress message shown while deleting a Post -->
    <string name="progress_post_delete">Deleting Post…</string>
    <!-- Common Content description for App Logo -->
    <string name="cd_image_logo">App logo</string>
    <!-- Common error message shown for Retry -->
    <string name="error_retry">Please try again</string>

    <!-- ======================== -->
    <!-- COMMON POST DATA STRINGS -->
    <!-- ======================== -->
    <string name="cd_image_post_creator_profile">Post creator\'s profile picture</string>
    <string name="cd_image_post_photo">Post creator\'s photo</string>

    <!-- ============================== -->
    <!-- STRINGS USED IN LOGIN ACTIVITY -->
    <!-- ============================== -->
    <string name="hint_login_password">Enter your password</string>
    <string name="label_button_login">Login</string>
    <string name="label_text_button_login_option_sign_up">Sign Up with Email</string>

    <!-- ========================================== -->
    <!-- STRINGS USED IN LOGIN AND SIGN-UP ACTIVITY -->
    <!-- ========================================== -->
    <string name="label_login_sign_up_divider">OR</string>
    <string name="hint_login_sign_up_email">Enter your email</string>
    <string name="error_login_sign_up_email_field_empty">Email can\'t be empty</string>
    <string name="error_login_sign_up_password_field_empty">Password can\'t be empty</string>
    <string name="error_login_sign_up_email_field_invalid">Not a valid email</string>
    <string name="error_login_sign_up_password_field_small_length">Password less than 6 digits</string>

    <!-- ================================ -->
    <!-- STRINGS USED IN SIGN-UP ACTIVITY -->
    <!-- ================================ -->
    <string name="hint_sign_up_name">Enter your full name</string>
    <string name="hint_sign_up_password">Choose your password</string>
    <string name="label_button_sign_up">Sign Up</string>
    <string name="label_text_button_sign_up_option_login">Login with Email</string>
    <string name="error_sign_up_name_field_empty">Name can\'t be empty</string>
    <string name="cd_image_sign_up_profile">Sign-Up Profile Image</string>

    <!-- ============================= -->
    <!-- STRINGS USED IN MAIN ACTIVITY -->
    <!-- ============================= -->
    <string name="title_main_bottom_nav_home">Home</string>
    <string name="title_main_bottom_nav_photo">Add Photos</string>
    <string name="title_main_bottom_nav_profile">Profile</string>

    <!-- ============================= -->
    <!-- STRINGS USED IN HOME FRAGMENT -->
    <!-- ============================= -->
    <string name="cd_imgbtn_home_item_toggle_post_like">Post like/unlike toggle button</string>
    <!-- Label shown in the item view where the number of likes needs to be displayed -->
    <plurals name="label_home_item_post_like_count">
        <!-- Output will be like '0 likes' / '1 like' / '123 likes' -->
        <item quantity="zero"><xliff:g example="0" id="like_count">%d</xliff:g> likes</item>
        <item quantity="one"><xliff:g example="1" id="like_count">%d</xliff:g> like</item>
        <item quantity="other"><xliff:g example="123" id="like_count">%d</xliff:g> likes</item>
    </plurals>
    <string name="message_home_post_published">Your new post is created and published!</string>

    <!-- ================================================================ -->
    <!-- STRINGS USED IN PHOTO FRAGMENT AND PHOTO OPTIONS DIALOG FRAGMENT -->
    <!-- ================================================================ -->
    <string name="label_photo_option_camera">Camera</string>
    <string name="cd_photo_option_camera">Camera option button icon</string>
    <string name="label_photo_option_gallery">Gallery</string>
    <string name="cd_photo_option_gallery">Gallery option button icon</string>
    <string name="title_photo_toolbar">Add Image</string>
    <string name="progress_photo_uploading_image">Uploading Image…</string>

    <!-- ================================ -->
    <!-- STRINGS USED IN PROFILE FRAGMENT -->
    <!-- ================================ -->
    <!-- Label shown for the number of posts created by the logged-in user -->
    <plurals name="label_profile_post_count">
        <!-- Output will be like '0 Posts' / '1 Post' / '123 Posts' -->
        <item quantity="zero">&lt;b&gt;<xliff:g example="0" id="post_count">%1$d</xliff:g>&lt;/b&gt; Posts</item>
        <item quantity="one">&lt;b&gt;<xliff:g example="1" id="post_count">%1$d</xliff:g>&lt;/b&gt; Post</item>
        <item quantity="other">&lt;b&gt;<xliff:g example="123" id="post_count">%1$d</xliff:g>&lt;/b&gt; Posts</item>
    </plurals>
    <string name="label_text_button_profile_logout">Logout</string>
    <string name="cd_image_profile_user">User profile picture</string>
    <string name="label_button_profile_edit">Edit Profile</string>
    <string name="title_profile_my_posts">My Posts</string>
    <string name="title_profile_no_posts">No Posts</string>
    <string name="profile_no_posts_description">Create your post using the plus button below</string>
    <string name="cd_image_profile_posts_empty">My Posts empty icon</string>
    <string name="cd_image_profile_item_post">Image posted by the logged-in User</string>
    <string name="message_dialog_confirm_profile_logout">Are you sure you want to logout?</string>
    <string name="dialog_confirm_profile_logout_button_positive">Logout</string>
    <string name="dialog_confirm_profile_logout_button_negative">Cancel</string>

    <!-- ===================================== -->
    <!-- STRINGS USED IN EDIT PROFILE ACTIVITY -->
    <!-- ===================================== -->
    <string name="hint_edit_profile_name">Name</string>
    <string name="hint_edit_profile_bio">Bio</string>
    <string name="hint_edit_profile_email">Email Address</string>
    <string name="title_edit_profile_toolbar">Edit Profile</string>
    <string name="label_text_button_edit_profile_change_pic">Change Photo</string>
    <string name="title_edit_profile_private_info">Private information</string>
    <string name="cd_image_edit_profile_change_pic">Profile picture</string>
    <string name="progress_edit_profile_loading_image">Loading Image…</string>
    <string name="progress_edit_profile_uploading_image">Uploading Image…</string>
    <string name="progress_edit_profile_save">Saving changes…</string>
    <string name="message_edit_profile_no_change">No changes detected. Closed without updating.</string>
    <string name="title_action_edit_profile_reset">Reset to defaults</string>
    <string name="title_condensed_action_edit_profile_reset">Reset</string>
    <string name="title_action_edit_profile_save">Save changes</string>
    <string name="title_condensed_action_edit_profile_save">Save</string>

    <!-- ==================================== -->
    <!-- STRINGS USED IN POST DETAIL ACTIVITY -->
    <!-- ==================================== -->
    <string name="title_post_detail_toolbar">Post Details</string>
    <string name="title_post_detail_likes">Liked by</string>
    <string name="title_action_post_detail_like">Like/Unlike</string>
    <string name="title_action_post_detail_delete">Delete</string>
    <string name="title_condensed_action_post_detail_like">Like/Unlike the Post</string>
    <string name="title_condensed_action_post_detail_delete">Delete the Post</string>
    <string name="cd_image_post_detail_photo_launch">Launch Photo</string>
    <string name="title_dialog_confirm_post_detail_delete_post">Delete Post?</string>
    <!-- Label to display the number of likes -->
    <plurals name="label_post_detail_like_count">
        <!-- Output will be like '0 likes' / '1 like' / '123 likes' -->
        <item quantity="zero"><xliff:g example="0" id="like_count">%d</xliff:g> likes</item>
        <item quantity="one"><xliff:g example="1" id="like_count">%d</xliff:g> like</item>
        <item quantity="other"><xliff:g example="123" id="like_count">%d</xliff:g> likes</item>
    </plurals>

    <!-- ================================== -->
    <!-- STRINGS USED IN POST LIKE ACTIVITY -->
    <!-- ================================== -->
    <string name="title_post_like_toolbar">Liked By</string>
    <string name="cd_image_post_like_item_user_profile">Post liked User\'s profile picture</string>
    <string name="title_action_post_like">Like/Unlike</string>
    <string name="title_condensed_action_post_like">Like/Unlike the Post</string>
    <string name="cd_image_post_like_heart">Heart Icon for likes count</string>

    <!-- =============================== -->
    <!-- STRINGS USED IN NO LIKES LAYOUT -->
    <!-- =============================== -->
    <string name="cd_image_no_likes">No Likes empty heart icon</string>
    <string name="title_no_likes">No Likes</string>
    <string name="no_likes_description">Tap the Heart and be the first to Like!</string>

    <!-- ======================================== -->
    <!-- STRINGS USED IN IMMERSIVE PHOTO ACTIVITY -->
    <!-- ======================================== -->
    <string name="cd_image_immersive_photo_close">Close button</string>

    <!-- ============================================== -->
    <!-- STRINGS USED IN CONFIRM OPTION DIALOG FRAGMENT -->
    <!-- ============================================== -->
    <string name="title_dialog_confirm_default">Confirm</string>
    <string name="message_dialog_confirm_default">Do you wish to proceed?</string>
    <string name="dialog_confirm_button_positive_default">Yes</string>
    <string name="dialog_confirm_button_negative_default">No</string>

</resources>