...

    <ImageView
        android:id="@+id/image_sign_up_profile"
        android:layout_width="@dimen/image_sign_up_profile_size"
        android:layout_height="@dimen/image_sign_up_profile_size"
        android:contentDescription="@string/cd_image_sign_up_profile"
        app:layout_constraintBottom_toTopOf="@+id/text_input_sign_up_name"
        app:layout_constraintEnd_toStartOf="@+id/guideline_sign_up_vertical_end"
        app:layout_constraintStart_toEndOf="@+id/guideline_sign_up_vertical_begin"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        app:srcCompat="@drawable/ic_signup" />

...
